# Resources

./: .gitignore  README.md  flotorch_setup.md
examples/flotorch-adk-plugin notebooks/: 01_basic_agent.ipynb  01_basic_llm.ipynb  02_agent_with_flotorch_session.ipynb  02_agent_with_tools.ipynb  03_agent_with_memory.ipynb  04_flotorch_agent.ipynb  05_complete_workflow.ipynb  06_flotorch_agent_with_config.ipynb  06_flotorch_with_local_tools_support_use_case.ipynb
examples/flotorch-agent-evaluation-notebook/: 01_LatencyMetric.ipynb  02_TrajectoryEvalWithLLM.ipynb  03_TrajectoryEvalWithLLMWithReference.ipynb  04_ToolCallAccuracy.ipynb  05_AgentGoalAccuracy.ipynb  06_UsageMetric.ipynb  07_AgentEvaluationUsingTraceID.ipynb  08_Three-metrics-evaluation-agent.ipynb  09_unified-agent.ipynb
examples/flotorch-agent-examples/: 01_SingleAgentWithCustomTool.ipynb  02_AgenticRAG.ipynb  03_SingleAgentWithMCPTool.ipynb
hackathons/AWSOct2025/: readme.md
industry/financial/loan_underwriter/: .env.example  .gitignore  Dockerfile  Makefile  README.md  config.py  docker-compose.yml  pyproject.toml
industry/financial/loan_underwriter/agents/credit_analyzer/: model.py  utils.py
industry/financial/loan_underwriter/agents/loan_parser/: main.py  prompt.py
industry/financial/loan_underwriter/agents/risk_assessor/: prompt.py  utils.py
industry/financial/loan_underwriter/common/: flotorch_chat_model.py  loan_model.py
industry/financial/loan_underwriter/frontend/: app.py
industry/financial/loan_underwriter/src/agents/credit_analyzer/: main.py  prompt.py
industry/financial/loan_underwriter/src/agents/loan_parser/: model.py  utils.py
industry/financial/loan_underwriter/src/agents/risk_assessor/: main.py  model.py
industry/financial/loan_underwriter/src/backend/: app.py
industry/financial/loan_underwriter/src/common/: flotorch_chat_model.py
industry/financial/loan_underwriter/src/frontend/: app.py
industry/financial/loan_underwriter/src/langgraph_flow/: graph.py
setup/: flotorch_setup.md
(+108 files in other folders)
